--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<html>
-<head>
-    <title>Мой проект</title>
-</head>
-<body>
-<h1>Тут будет мой веб проект</h1>
-</body>
-</html>
+<!DOCTYPE html><html><head>    <title>itmo_WebLabs</title></head><body><ul>    <li>        <a href="lab1/index.html">Lab1</a>    </li>    <li>        <a href="lab2/index.html">Lab2</a>    </li>    <li>        <a href="lab3/index.html">Lab3</a>    </li>    <li>        <a href="lab4/index.html">Lab3</a>    </li>    <li>        <a href="lab5/index.html">Lab3</a>    </li>    <li>        <a href="lab6/index.html">Lab3</a>    </li>    <li>        <a href="lab7/index.html">Lab3</a>    </li></ul></body></html>
