--- a/lab5/index.html
+++ b/lab5/index.html
@@ -40,6 +40,7 @@
     </div>
 
     <script src="scripts/burger-menu.js"></script>
+    <script src="scripts/active-menu-script.js"></script>
 </header>
 
 <main>
