--- a/lab5/index.html
+++ b/lab5/index.html
@@ -22,12 +22,14 @@
             <a href="index.html">MinimalistBoards</a>
             <a href="products/keyboards.html">Клавиатуры</a>
             <a href="products/accessories.html">Аксуссуары</a>
+            <a href="products/scheduler.html">Генератор расписания</a>
         </ul>
     </div>
     <div class="navbar">
         <a href="index.html">MinimalistBoards</a>
         <a href="products/keyboards.html">Клавиатуры</a>
         <a href="products/accessories.html">Аксуссуары</a>
+        <a href="products/scheduler.html">Генератор расписания</a>
 
         <div class="search-container">
             <form action="index.html">
@@ -40,7 +42,7 @@
     </div>
 
     <script src="scripts/burger-menu.js"></script>
-    <script src="scripts/active-menu-script.js"></script>
+    <script src="scripts/active-menu.js"></script>
 </header>
 
 <main>
